use personal forked theme

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: cold stage
 
 # Build settings:
-theme: jekyll-theme-minimal
+remote_theme: hanhanhan-kim/minimal
 markdown: kramdown
 plugins:
   - jemoji
