overwrite configs to match personal page defaults

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+# Site settings:
+title: han kim
+description: neuro grad student
+
 # Build settings:
 remote_theme: hanhanhan-kim/minimal
 markdown: kramdown
